@@ -414,10 +414,7 @@ int LINKAGEMODE wxGenericTreeModelItemCmp( void ** id1, void ** id2)
 // wxDataViewMainWindow
 //-----------------------------------------------------------------------------
 
-WX_DEFINE_SORTED_USER_EXPORTED_ARRAY_SIZE_T(unsigned int, wxDataViewSelection,
-                                            WXDLLIMPEXP_ADV);
-WX_DECLARE_LIST(wxDataViewItem, ItemList);
-WX_DEFINE_LIST(ItemList)
+WX_DEFINE_SORTED_ARRAY_SIZE_T(unsigned int, wxDataViewSelection);
 
 class wxDataViewMainWindow: public wxWindow
 {
@@ -2009,70 +2006,65 @@ bool wxDataViewMainWindow::ItemDeleted(const wxDataViewItem& parent,
             (wxDataViewVirtualListModel*) GetOwner()->GetModel();
         m_count = list_model->GetCount();
 
-        if( m_currentRow > GetRowCount() )
-            m_currentRow = m_count - 1;
-
         // TODO: why empty the entire selection?
         m_selection.Empty();
-
-        UpdateDisplay();
-
-        return true;
     }
-
-    wxDataViewTreeNode * node = FindNode(parent);
-
-    // Notice that it is possible that the item being deleted is not in the
-    // tree at all, for example we could be deleting a never shown (because
-    // collapsed) item in a tree model. So it's not an error if we don't know
-    // about this item, just return without doing anything then.
-    if ( !node || node->GetChildren().Index(item.GetID()) == wxNOT_FOUND )
-        return false;
-
-    int sub = -1;
-    node->GetChildren().Remove( item.GetID() );
-    // Manipolate selection
-    if( m_selection.GetCount() > 1 )
+    else // general case
     {
-        m_selection.Empty();
-    }
-    bool isContainer = false;
-    wxDataViewTreeNodes nds = node->GetNodes();
-    for (size_t i = 0; i < nds.GetCount(); i ++)
-    {
-        if (nds[i]->GetItem() == item)
+        wxDataViewTreeNode * node = FindNode(parent);
+
+        // Notice that it is possible that the item being deleted is not in the
+        // tree at all, for example we could be deleting a never shown (because
+        // collapsed) item in a tree model. So it's not an error if we don't know
+        // about this item, just return without doing anything then.
+        if ( !node || node->GetChildren().Index(item.GetID()) == wxNOT_FOUND )
+            return false;
+
+        int sub = -1;
+        node->GetChildren().Remove( item.GetID() );
+        // Manipolate selection
+        if( m_selection.GetCount() > 1 )
         {
-            isContainer = true;
-            break;
+            m_selection.Empty();
         }
-    }
-    if( isContainer )
-    {
-        wxDataViewTreeNode * n = NULL;
-        wxDataViewTreeNodes nodes = node->GetNodes();
-        int len = nodes.GetCount();
-        for( int i = 0; i < len; i ++)
+        bool isContainer = false;
+        wxDataViewTreeNodes nds = node->GetNodes();
+        for (size_t i = 0; i < nds.GetCount(); i ++)
         {
-            if( nodes[i]->GetItem() == item )
+            if (nds[i]->GetItem() == item)
             {
-                n = nodes[i];
+                isContainer = true;
                 break;
             }
         }
+        if( isContainer )
+        {
+            wxDataViewTreeNode * n = NULL;
+            wxDataViewTreeNodes nodes = node->GetNodes();
+            int len = nodes.GetCount();
+            for( int i = 0; i < len; i ++)
+            {
+                if( nodes[i]->GetItem() == item )
+                {
+                    n = nodes[i];
+                    break;
+                }
+            }
 
-        wxCHECK_MSG( n != NULL, false, "item not found" );
+            wxCHECK_MSG( n != NULL, false, "item not found" );
 
-        node->GetNodes().Remove( n );
-        sub -= n->GetSubTreeCount();
-        ::DestroyTreeHelper(n);
+            node->GetNodes().Remove( n );
+            sub -= n->GetSubTreeCount();
+            ::DestroyTreeHelper(n);
+        }
+        // Make the row number invalid and get a new valid one when user call GetRowCount
+        m_count = -1;
+        node->ChangeSubTreeCount(sub);
     }
-    // Make the row number invalid and get a new valid one when user call GetRowCount
-    m_count = -1;
-    node->ChangeSubTreeCount(sub);
 
     // Change the current row to the last row if the current exceed the max row number
     if( m_currentRow > GetRowCount() )
-        m_currentRow = m_count - 1;
+        ChangeCurrentRow(m_count - 1);
 
     UpdateDisplay();
 
@@ -4436,13 +4428,22 @@ int wxDataViewCtrl::GetSelections( wxDataViewItemArray & sel ) const
 {
     sel.Empty();
     wxDataViewSelection selection = m_clientArea->GetSelections();
-    int len = selection.GetCount();
-    for( int i = 0; i < len; i ++)
+
+    const size_t len = selection.size();
+    for ( size_t i = 0; i < len; i++ )
     {
-        unsigned int row = selection[i];
-        sel.Add( m_clientArea->GetItemByRow( row ) );
+        wxDataViewItem item = m_clientArea->GetItemByRow(selection[i]);
+        if ( item.IsOk() )
+        {
+            sel.Add(item);
+        }
+        else
+        {
+            wxFAIL_MSG( "invalid item in selection - bad internal state" );
+        }
     }
-    return len;
+
+    return sel.size();
 }
 
 void wxDataViewCtrl::SetSelections( const wxDataViewItemArray & sel )
@@ -4504,73 +4505,6 @@ bool wxDataViewCtrl::IsSelected( const wxDataViewItem & item ) const
         return m_clientArea->IsRowSelected(row);
     }
     return false;
-}
-
-// Selection code with row number as parameter
-int wxDataViewCtrl::GetSelections( wxArrayInt & sel ) const
-{
-    sel.Empty();
-    wxDataViewSelection selection = m_clientArea->GetSelections();
-    int len = selection.GetCount();
-    for( int i = 0; i < len; i ++)
-    {
-        unsigned int row = selection[i];
-        sel.Add( row );
-    }
-    return len;
-}
-
-void wxDataViewCtrl::SetSelections( const wxArrayInt & sel )
-{
-    wxDataViewSelection selection(wxDataViewSelectionCmp);
-    int len = sel.GetCount();
-    for( int i = 0; i < len; i ++ )
-    {
-        int row = sel[i];
-        if( row >= 0 )
-            selection.Add( static_cast<unsigned int>(row) );
-    }
-    m_clientArea->SetSelections( selection );
-}
-
-void wxDataViewCtrl::Select( int row )
-{
-    if( row >= 0 )
-    {
-        if (m_clientArea->IsSingleSel())
-            m_clientArea->SelectAllRows(false);
-        m_clientArea->SelectRow( row, true );
-    }
-}
-
-void wxDataViewCtrl::Unselect( int row )
-{
-    if( row >= 0 )
-        m_clientArea->SelectRow(row, false);
-}
-
-bool wxDataViewCtrl::IsSelected( int row ) const
-{
-    if( row >= 0 )
-        return m_clientArea->IsRowSelected(row);
-    return false;
-}
-
-void wxDataViewCtrl::SelectRange( int from, int to )
-{
-    wxArrayInt sel;
-    for( int i = from; i < to; i ++ )
-        sel.Add( i );
-    m_clientArea->Select(sel);
-}
-
-void wxDataViewCtrl::UnselectRange( int from, int to )
-{
-    wxDataViewSelection sel = m_clientArea->GetSelections();
-    for( int i = from; i < to; i ++ )
-        if( sel.Index( i ) != wxNOT_FOUND )
-            sel.Remove( i );
-    m_clientArea->SetSelections(sel);
 }
 
 void wxDataViewCtrl::SelectAll()
